find_package(PkgConfig REQUIRED)
pkg_check_modules(CMOCKA REQUIRED cmocka)

include_directories(${CMOCKA_INCLUDE_DIRS})

macro(add_uds_test name source)
    add_executable(${name} ${source} unit/test_helpers.c)
    target_link_libraries(${name} uds ${CMOCKA_LIBRARIES})
    add_test(NAME ${name} COMMAND ${name})
endmacro()

add_uds_test(test_core test_core.c)
add_uds_test(test_service_10 unit/test_service_10.c)
add_uds_test(test_service_22 unit/test_service_22.c)
add_uds_test(test_service_27 unit/test_service_27.c)
add_uds_test(test_service_3E unit/test_service_3E.c)
add_uds_test(test_service_11 unit/test_service_11.c)
add_uds_test(test_service_28 unit/test_service_28.c)
add_uds_test(test_service_did unit/test_service_did.c)
add_uds_test(test_timing unit/test_timing.c)
add_uds_test(test_service_29 unit/test_service_29.c)
add_uds_test(test_service_dtc unit/test_service_dtc.c)
add_uds_test(test_service_flash unit/test_service_flash.c)
add_uds_test(test_service_mem unit/test_service_mem.c)
add_uds_test(test_osal unit/test_osal.c)
add_uds_test(test_endian unit/test_endian.c)
add_uds_test(test_fuzz_core unit/test_fuzz_core.c)
add_uds_test(test_transport unit/test_transport.c)
target_link_options(test_transport PRIVATE -Wl,--wrap=uds_input_sdu)
add_uds_test(test_service_negative unit/test_service_negative.c)
add_uds_test(test_tp_flow_control unit/test_tp_flow_control.c)
add_uds_test(test_nrc_priority unit/test_nrc_priority.c)
add_uds_test(test_concurrency unit/test_concurrency.c)
add_uds_test(test_service_2E unit/test_service_2E.c)
add_uds_test(test_safety_gate unit/test_safety_gate.c)
add_uds_test(test_async unit/test_async.c)
add_uds_test(test_nvm_persistence unit/test_nvm_persistence.c)
add_uds_test(test_compliance_suppress unit/test_compliance_suppress.c)
add_uds_test(test_service_10_prog unit/test_service_10_prog.c)
add_uds_test(test_service_34_flex unit/test_service_34_flex.c)
add_uds_test(test_compliance_pass2 unit/test_compliance_pass2.c)

# Manual definition for pass3 to allow custom mocks (avoiding test_helpers.c link)
add_executable(test_compliance_pass3 unit/test_compliance_pass3.c)
target_link_libraries(test_compliance_pass3 uds ${CMOCKA_LIBRARIES})
add_test(NAME test_compliance_pass3 COMMAND test_compliance_pass3)

add_uds_test(test_integration integration/test_integration.c)
